--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
+@import "tailwindcss";
+
 #root {
   max-width: 1280px;
   margin: 0 auto;
@@ -33,8 +35,8 @@
   }
 }
 
-.card {
-  padding: 2em;
+.h1 {
+  color: white;
 }
 
 .read-the-docs {
